--- a/Resume.html
+++ b/Resume.html
@@ -1,5 +1,6 @@
 <html>
-        <head><center><div style="background-color:rgb(184, 184, 184) "><h1><b> ABINISHA R </b><h1></div></center></head>
+        <head>"sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script><center><div style="background-color:rgb(184, 184, 184) "><h1><b> ABINISHA R </b><h1></div></center></head>
         <title>ABINISHA R</title>
         <body><br>
             
